第二次提交，基本实现功能（患者管理）。

--- a/lab3.qrc
+++ b/lab3.qrc
@@ -3,5 +3,9 @@
         <file>img/login.png</file>
         <file>img/log-out.png</file>
         <file>img/return.png</file>
+        <file>img/delete.png</file>
+        <file>img/edit.png</file>
+        <file>img/new.png</file>
+        <file>img/search1187938easyiconnet.png</file>
     </qresource>
 </RCC>
