--- a/loginview.ui
+++ b/loginview.ui
@@ -127,7 +127,11 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QLineEdit" name="inputUserPassword"/>
+        <widget class="QLineEdit" name="inputUserPassword">
+         <property name="echoMode">
+          <enum>QLineEdit::EchoMode::Password</enum>
+         </property>
+        </widget>
        </item>
        <item row="2" column="0" colspan="2">
         <spacer name="verticalSpacer_4">
