--- a/patienteditview.ui
+++ b/patienteditview.ui
@@ -57,7 +57,7 @@
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QLineEdit" name="lineEdit"/>
+          <widget class="QLineEdit" name="dbEditID"/>
          </item>
          <item row="1" column="0">
           <widget class="QLabel" name="label_2">
@@ -67,7 +67,7 @@
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QLineEdit" name="lineEdit_2"/>
+          <widget class="QLineEdit" name="dbEditName"/>
          </item>
          <item row="2" column="0">
           <widget class="QLabel" name="label_3">
@@ -77,7 +77,7 @@
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="QLineEdit" name="lineEdit_3"/>
+          <widget class="QLineEdit" name="dbEditIDCard"/>
          </item>
          <item row="3" column="0">
           <widget class="QLabel" name="label_4">
@@ -87,7 +87,7 @@
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QComboBox" name="comboBox">
+          <widget class="QComboBox" name="dbcomboBox">
            <item>
             <property name="text">
              <string>男</string>
@@ -108,7 +108,7 @@
           </widget>
          </item>
          <item row="4" column="1">
-          <widget class="QDateEdit" name="dateEdit"/>
+          <widget class="QDateEdit" name="dbDateEditDOB"/>
          </item>
          <item row="5" column="0">
           <widget class="QLabel" name="label_6">
@@ -125,7 +125,7 @@
           </widget>
          </item>
          <item row="6" column="1">
-          <widget class="QSpinBox" name="spinBox_2"/>
+          <widget class="QSpinBox" name="dbSpinWeight"/>
          </item>
          <item row="7" column="0">
           <widget class="QLabel" name="label_8">
@@ -135,10 +135,20 @@
           </widget>
          </item>
          <item row="7" column="1">
-          <widget class="QLineEdit" name="lineEdit_4"/>
+          <widget class="QLineEdit" name="dbEditMobile"/>
          </item>
          <item row="5" column="1">
-          <widget class="QSpinBox" name="spinBox"/>
+          <widget class="QSpinBox" name="dbSpinHeight"/>
+         </item>
+         <item row="8" column="0">
+          <widget class="QLabel" name="label_9">
+           <property name="text">
+            <string>创建时间：</string>
+           </property>
+          </widget>
+         </item>
+         <item row="8" column="1">
+          <widget class="QLineEdit" name="dbCreateTimeStamp"/>
          </item>
         </layout>
        </item>
@@ -205,6 +215,19 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>dbEditID</tabstop>
+  <tabstop>dbEditName</tabstop>
+  <tabstop>dbEditIDCard</tabstop>
+  <tabstop>dbcomboBox</tabstop>
+  <tabstop>dbDateEditDOB</tabstop>
+  <tabstop>dbSpinHeight</tabstop>
+  <tabstop>dbSpinWeight</tabstop>
+  <tabstop>dbEditMobile</tabstop>
+  <tabstop>dbCreateTimeStamp</tabstop>
+  <tabstop>pushButton</tabstop>
+  <tabstop>pushButton_2</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
